# veas

./: .env.example  .gitignore  .railwayignore  README.md  _apply_t4_changes.py  _reapply_t1.py  audit_inventory.md  feedback.md  finalize.json  mediator-bot-spec.md  nixpacks.toml  plan_revision.json  pyproject.toml  tool_schemas.py
app/: __init__.py  config.py  db.py  main.py  staging.py
app/bots/: base.py  (+9 more)
docs/: SECURITY.md  agent-reliability-cleanup-revised.md  believable-discord-typing-plan.md  coach-monitor.md  discord-pacing.md  distillations-migration.md  live-conversation-mode.md  live-voice-agent-meta-checklist.md  live-voice-deployment-runbook.md  multi-agent-architecture.md  observability.md  ops.md  scheduler.md
evals/: __init__.py  assertions.py  capture.py  cli.py  db.py  execution.py  factories.py  judge.py  replay.py  results.py  runner.py  scenario.py  state.py
megaplans/: prompt-registry-and-reminder-bundling-brief.md  sprint-1-handoff-contract.md  xen-eval-harness-brief.md  xen-v1-epic.chain.yaml  xen-v2-deploy-runbook.md
migrations/: 0001_init.sql  0002_plan2.sql  0003_plan4_oob_reviews.sql  0004_plan5_scheduled_jobs.sql  0005_plan6_ops.sql  0006_plan7_eval_results.sql  0007_security_hardening.sql  0012_cross_thread_sharing.sql  0013_bridge_candidates.sql  0014_feedback_resolution.sql  0015_distillations.sql  0016_partner_bridge_paths.sql  0017_scheduled_tasks.sql  0019_feedback_reaction_context.sql  0020_topics_bots_bindings.sql  0021_artifact_topics.sql  0022_topic_status_user_bot_state.sql  0023_nullable_scope_columns.sql  0024_backfill.sql  (+28 more)
(+321 files in other folders)
